<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/tc_Summary"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="5dp" >

        <Button
            android:id="@+id/btn_Save"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:onClick="writeEntry"
            android:text="@string/save" >

            <requestFocus />
        </Button>

        <TableLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="10dp"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:paddingTop="10dp" >

            <TableRow
                android:id="@+id/trow_summary_from_stn"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/txt_summary_from_stn_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingRight="10dp"
                    android:text="@string/add_summary_from" />

                <TextView
                    android:id="@+id/txt_summary_from_stn_data"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/dotdotdot" />

            </TableRow>

            <TableRow
                android:id="@+id/trow_summary_from_datetime"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/txt_summary_from_datetime_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/add_summary_at" />

                <TextView
                    android:id="@+id/txt_summary_from_datetime_data"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/dotdotdot" />
                
            </TableRow>

            <TableRow
                android:id="@+id/trow_summary_to_stn"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:paddingTop="10dp" >

                <TextView
                    android:id="@+id/txt_summary_to_stn_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/add_summary_to" />

                <TextView
                    android:id="@+id/txt_summary_to_stn_data"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/dotdotdot" />
                
            </TableRow>

            <TableRow
                android:id="@+id/trow_summary_to_datetime"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/txt_summary_to_datetime_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/add_summary_at" />

                <TextView
                    android:id="@+id/txt_summary_to_datetime_data"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/dotdotdot" />
                

            </TableRow>

            <TableRow
                android:id="@+id/trow_summary_class"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:paddingTop="10dp" >

                <TextView
                    android:id="@+id/txt_summary_class_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/add_summary_with" />

                <TextView
                    android:id="@+id/txt_summary_class_data"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/dotdotdot" />
                
            </TableRow>

            <TableRow
                android:id="@+id/trow_summary_headcode"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/txt_summary_headcode_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingRight="10dp"
                    android:text="@string/add_summary_as" />

                <TextView
                    android:id="@+id/txt_summary_headcode_data"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/dotdotdot" />
                
            </TableRow>

        </TableLayout>

        <CheckBox
            android:id="@+id/chk_Checkin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="false"
            android:text="@string/foursquare_checkin_journey"
            android:textAppearance="?android:attr/textAppearanceSmall" />
    </LinearLayout>

</ScrollView>