<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/tc_Detail"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="5dp" >

        <TableLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" >

            <TableRow
                android:id="@+id/tableRow1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <CheckBox
                    android:id="@+id/chk_DetailClass"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:onClick="onClassCheckboxClicked"
                    android:paddingRight="5dp"
                    android:text="@string/tr_class" />

                <EditText
                    android:id="@+id/txt_DetailClass"
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:inputType="text" >

                    <requestFocus />
                </EditText>

            </TableRow>

            <TableRow
                android:id="@+id/tableRow2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <CheckBox
                    android:id="@+id/chk_DetailHeadcode"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:onClick="onHeadcodeCheckboxClicked"
                    android:paddingRight="5dp"
                    android:text="@string/tr_headcode" />

                <EditText
                    android:id="@+id/txt_DetailHeadcode"
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:inputType="text" />

                <Button
                    android:id="@+id/btn_startHeadcodeSelectionActivity"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="startHeadcodeSelectionActivity"
                    android:text="@string/dotdotdot" />

            </TableRow>

        </TableLayout>

        <CheckBox
            android:id="@+id/chk_DetailUseForStats"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:checked="true"
            android:paddingRight="5dp"
            android:text="@string/add_use_for_stats" />

    </LinearLayout>

</ScrollView>